added program requirements